# NaiveHttpServer

./: CMakeLists.txt  HttpServerDriver.cpp  HttpServerDriver.sln  ReadMe.txt  Readme.md  message.hpp  request.hpp  response.hpp  server.cpp  server.hpp
HttpServerDriver/: HttpMessage.cpp  HttpMessage.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp  HttpServer.cpp  HttpServer.h  HttpServer.hpp  HttpServerDriver.cpp  HttpServerDriver.vcxproj  HttpServerDriver.vcxproj.filters  HttpSocket.cpp  HttpSocket.hpp  HttpUrl.cpp  HttpUrl.hpp  HttpUtil.cpp  HttpUtil.hpp  message.cpp  packages.config  request.cpp  response.cpp  socket.cpp  socket.hpp  url.cpp  util.cpp
cmake/: asio.cmake  curl.cmake  gtest.cmake  openssl.cmake
include/: auth.hpp  client.hpp  message.hpp  request.hpp  response.hpp  server.hpp  socket.hpp  util.hpp
src/: CMakeLists.txt  auth.cpp  client.cpp  request.cpp  response.cpp  server.cpp  socket.cpp  url.cpp  util.cpp
test/: CMakeLists.txt  http_test.cpp
